multi: expose accounts through ListAccounts RPC
Now that we have the ability to create new accounts, it is also useful
to expose them over the RPC interface to provide digestible account
information to users.
