# clmrpc/client.swagger.json
@@ -178,18 +178,33 @@
     "clmrpcAccount": {
       "type": "object",
       "properties": {
-        "account_sub_key_hex": {
-          "type": "string"
-        },
-        "account_value": {
+        "trader_key": {
           "type": "string",
+          "format": "byte"
+        },
+        "outpoint": {
+          "$ref": "#/definitions/clmrpcOutPoint"
+        },
+        "value": {
+          "type": "integer",
           "format": "int64"
         },
-        "account_duration": {
-          "type": "string",
+        "expiration_height": {
+          "type": "integer",
           "format": "int64"
+        },
+        "state": {
+          "$ref": "#/definitions/clmrpcAccountState"
         }
       }
+    },
+    "clmrpcAccountState": {
+      "type": "string",
+      "enum": [
+        "PENDING_OPEN",
+        "OPEN"
+      ],
+      "default": "PENDING_OPEN"
     },
     "clmrpcAsk": {
       "type": "object",
@@ -249,11 +264,11 @@
       "type": "object",
       "properties": {
         "account_value": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
-        "account_duration": {
-          "type": "string",
+        "account_expiry": {
+          "type": "integer",
           "format": "int64"
         }
       }
@@ -261,8 +276,8 @@
     "clmrpcInitAccountResponse": {
       "type": "object",
       "properties": {
-        "account_sub_key_hex": {
-          "type": "string"
+        "account_point": {
+          "$ref": "#/definitions/clmrpcOutPoint"
         }
       }
     },
@@ -308,6 +323,21 @@
     },
     "clmrpcModifyAccountResponse": {
       "type": "object"
+    },
+    "clmrpcOutPoint": {
+      "type": "object",
+      "properties": {
+        "txid": {
+          "type": "string",
+          "format": "byte",
+          "description": "*\nRaw bytes representing the transaction id."
+        },
+        "output_index": {
+          "type": "integer",
+          "format": "int64",
+          "description": "*\nThe index of the output on the transaction."
+        }
+      }
     },
     "clmrpcSubmitOrderRequest": {
       "type": "object",
